fixed some spacing on contact page

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,14 @@ h1 {
   background-color: #e197fd;
   color: white !important;
 }
+
+/* Anime js css */
+/* .ml2 {
+  font-weight: 900;
+  font-size: 3.5em;
+}
+
+.ml2 .letter {
+  display: inline-block;
+  line-height: 1em;
+} */
